@@ -1,15 +1,17 @@
 param (
-    [string]$command = "list",
-    [string]$distro  = "centos:7",
-    [string]$cmd     = "/usr/sbin/init"
+    [string]$command  = "list",
+    [string]$scenario = "default",
+    [string]$role     = "nomad",
+    [string]$distro   = "centos:7",
+    [string]$cmd      = "/usr/sbin/init"
 )
-$role = "nomad"
 
 docker run --rm -it `
   -v "$($pwd)/$($role):/tmp/$($role)" `
   -v "/var/run/docker.sock:/var/run/docker.sock" `
   -w "/tmp/$($role)" `
-  -e MOLECULE_IMAGE="$($distro)" `
-  -e MOLECULE_COMMAND="$($cmd)" `
+  -e TEST_IMAGE="$($distro)" `
+  -e TEST_IMAGE_CMD="$($cmd)" `
+  -e MOLECULE_NO_LOG=false `
   quay.io/ansible/molecule:latest `
-  molecule "$($command)"
+  molecule $command --scenario-name $scenario
