@@ -3,8 +3,8 @@
 ################################################################################
 
 # Nomad tunables configuration
-# References:
-#   - https://www.nomadproject.io/guides/install/production/requirements.html
+#   References:
+#     - https://www.nomadproject.io/guides/install/production/requirements.html
 
 net.bridge.bridge-nf-call-arptables = 1
 net.bridge.bridge-nf-call-ip6tables = 1
