@@ -7,11 +7,19 @@ if [ -d "{{ path_binaries }}" ] ; then
   PATH="$PATH:{{ path_binaries }}"
 fi
 
-{% if cni_enabled %}
+{% if cni_download %}
 ANSIBLE_CNI_VERSION={{ cni_version }}
 if [ -d "{{ cni_path }}" ] ; then
   PATH="$PATH:{{ cni_path }}"
 fi
+{% endif %}
+
+{% if plugin_podman_download %}
+ANSIBLE_PODMAN_VERSION={{ plugin_podman_version }}
+{% endif %}
+
+{% if plugin_singularity_download %}
+ANSIBLE_SINGULARITY_VERSION={{ plugin_singularity_version }}
 {% endif %}
 
 ################################################################################
